<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_email_verified"
        android:textSize="36sp"
        android:layout_centerVertical="true"

        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_send_email_name"
        android:layout_alignParentBottom="true"
        android:id="@+id/btn_send"
        app:backgroundTint="#FF5722"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        app:cornerRadius="14dp"
        android:layout_marginBottom="26dp"
        tools:ignore="RelativeOverlap" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_refresh_name"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        app:backgroundTint="#3F51B5"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        app:cornerRadius="14dp"
        android:layout_marginBottom="26dp"
        />

    <TextView
        android:id="@+id/txt_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/txt_logout"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"

        />
</RelativeLayout>